--- a/README.html
+++ b/README.html
@@ -284,7 +284,7 @@ div.tocify {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">CE001</a>
+      <a class="navbar-brand" href="index.html">CE085</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -308,41 +308,20 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="Slides/Aula1.pdf">Introdução à Análise Exploratória de Dados [PDF]</a>
+      <a href="Slides/Primer.pdf">Ferramentas de probabilidade [PDF]</a>
     </li>
     <li>
-      <a href="Slides/Aula2.pdf">Probabilidaes [PDF]</a>
+      <a href="Slides/Notes.pdf">Notas de aula Bent Jorgensen [PDF]</a>
     </li>
     <li>
-      <a href="Slides/Aula3.pdf">Variáveis aleatórias discretas [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula4.pdf">Medidas resumo [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula5.pdf">Variáveis bidimensionais [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula6.pdf">Variáveis aleatórias contínuas [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula7.pdf">Inferência estatística [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Script1.R">R script - Inferência estatística</a>
-    </li>
-    <li>
-      <a href="Slides/Aula8.pdf">Teste de hipóteses [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula9.pdf">Tópicos Especiais [PDF]</a>
+      <a href="Slides/masterSINAPE.pdf">Métodos Computacionais para Inferência estatística [PDF]</a>
     </li>
   </ul>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="https://github.com/wbonat/ce001m-2017-1">GitHub</a>
+  <a href="https://github.com/wbonat/CE085">GitHub</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
