--- a/aulas.html
+++ b/aulas.html
@@ -180,7 +180,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">CE001</a>
+      <a class="navbar-brand" href="index.html">CE085</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -204,41 +204,20 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="Slides/Aula1.pdf">Introdução à Análise Exploratória de Dados [PDF]</a>
+      <a href="Slides/Primer.pdf">Ferramentas de probabilidade [PDF]</a>
     </li>
     <li>
-      <a href="Slides/Aula2.pdf">Probabilidaes [PDF]</a>
+      <a href="Slides/Notes.pdf">Notas de aula Bent Jorgensen [PDF]</a>
     </li>
     <li>
-      <a href="Slides/Aula3.pdf">Variáveis aleatórias discretas [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula4.pdf">Medidas resumo [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula5.pdf">Variáveis bidimensionais [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula6.pdf">Variáveis aleatórias contínuas [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula7.pdf">Inferência estatística [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Script1.R">R script - Inferência estatística</a>
-    </li>
-    <li>
-      <a href="Slides/Aula8.pdf">Teste de hipóteses [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula9.pdf">Tópicos Especiais [PDF]</a>
+      <a href="Slides/masterSINAPE.pdf">Métodos Computacionais para Inferência estatística [PDF]</a>
     </li>
   </ul>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="https://github.com/wbonat/ce001m-2017-1">GitHub</a>
+  <a href="https://github.com/wbonat/CE085">GitHub</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
@@ -262,18 +241,127 @@ $(document).ready(function () {
 </div>
 
 
-<p>Parte I - Introdução ao pensamento estatístico</p>
+<p><strong>Parte I - Introdução ao pensamento estatístico</strong></p>
 <p><strong>Semana 1</strong></p>
 <ul>
 <li><strong>31/07</strong>: Apresentação do curso.</li>
 <li><strong>02/08</strong>: Idéias - população, amostra, amostragem e pensamento frequentista.</li>
 <li><strong>04/08</strong>: Idéias - modelos estatístico, suporte, parâmetros, estimadores e estimativas.</li>
 </ul>
-<p>** Semana 2 <strong> - </strong>07/08<strong>: Idéias: propriedades de estimadores, não-viés, consistência, distribuição e eficiência. - </strong>09/08<strong>: Consolidação dos conceitos apresentados. - </strong>11/08<strong>: Exemplos baseados em simulação das propriedades apresentadas. </strong> Semana 3 <strong> - </strong>14/08<strong>: Revisão geral e formalização matemática. - </strong>16/08<strong>: Revisão geral e formalização matemática. - </strong>18/08<strong>: Revisão geral e formalização matemática. </strong> Semana 4 <strong> Parte II - Revisão e exemplificação computacional de ferramentas da teoria de probabilidades. - </strong>21/08<strong>: Exemplo motivacional. - </strong>23/08<strong>: Lei dos grandes números (LLN) e tipos de convergência. - </strong>25/08<strong>: Consistência de estimadores. Desigualdade de Chebychev’s, Chebychev’s LLN. Discussão tipos de convergência. </strong> Semana 5 <strong> - </strong>28/08<strong>: Kolmogorov’s LLN, Markov’s LLN, LLNs para v.a correlacionadas. - </strong>30/08<strong>: Resultados para manipulação de limites em probabilidade. - </strong>01/09<strong>: Exemplos de simulação. </strong> Semana 6 <strong> - </strong>04/09<strong>: Convergência em distribuição e Teorema Central do Limite-CLT (Lindeberg-Levy, Lindeberg-Levy multivariado, Lindeberg-Feller). - </strong>06/09<strong>: Liapounov’s CLT, normalidade assintótica e manipulação de CLT’s. - </strong>08/09<strong>: Método detal e revisão geral. </strong> Semana 7 <strong> - </strong>11/09<strong>: Aula vaga para cobrir possíveis pontos adicionais ou que não deu tempo nas semanas anteriores. - </strong>13/09<strong>: Aula vaga para cobrir possíveis pontos adicionais ou que não deu tempo nas semanas anteriores. - </strong>15/09<strong>: Avaliação 1. </strong> Semana 8 <strong> Parte III - Inferência estatística - </strong>18/09<strong>: Verossimilhança e log-verossimilhança. - </strong>20/09<strong>: Função escore e informação de Fisher. - </strong>22/09<strong>: Informação observada. </strong> Semana 9 **<br />
-- <strong>25/09</strong>: Desigualdade de Cramér-Rao. - <strong>27/09</strong>: Normalidade assintótica da função escore. - <strong>29/09</strong>: Estimador de máxima verossimilhança (MLE). ** Semana 10 **<br />
-- <strong>02/10</strong>: Familia exponencial de distribuições. - <strong>04/10</strong>: Consistência do MLE. - <strong>06/10</strong>: Eficiência e normalidade assintótica do MLE. ** Semana 11 **<br />
-- <strong>09/10</strong>: Exemplos: A distribuição Weibull e modelos de locação. - <strong>11/10</strong>: Vetores de parâmetros: o vetor escore e a matrix de informação de Fisher. - <strong>13/10</strong>: Consistência e normalidade assintótica do MLE, ortogonalidade. ** Semana 12 **<br />
-- <strong>16/10</strong>: Exemplos: Modelos exponenciais de dispersão e regressão linear. - <strong>18/10</strong>: Suficiência. Critério da fatorização de Neyman-Fisher. - <strong>20/10</strong>: Teorema de Rao-Blackwell e Lehmann-Scheffê. ** Semana 13 ** - <strong>23/10</strong>: Teste da razão de verossimilhança e outros testes para grandes amostras. - <strong>25/10</strong>: Continuação e exemplos. - <strong>27/10</strong>: Avaliação 2. ** Semana 14 ** Parte IV - Computação e Inferência estatística - <strong>30/10</strong>: Entendendo distribuições de probabilidade. Estimação pontual e intervalos de confiança assintóticos. - <strong>01/11</strong>: Testes de hipóteses e verossimilhança perfilhada. - <strong>03/11</strong>: Desenhando estudos de simulação para avaliar propriedades de estimadores, intervalos de confiança e testes de hipóteses. ** Semana 15 ** - <strong>06/11</strong>: Prática I: Programando a função de probabilidade ou densidade probabilidade. Verossimilhança, log-verossimilhança e maximização numérica. - <strong>08/11</strong>: Prática II: Intervalos de confiança e teste de hipóteses. - <strong>10/11</strong>: Prática III: Programando melhores algorithmos de maximização (Newthon-Raphson e Fisher-Scoring). ** Semana 16 ** - <strong>13/11</strong>: Trabalho prático. - <strong>15/11</strong>: Trabalho prático. - <strong>17/11</strong>: Trabalho prático. ** Semana 17 ** - <strong>13/11</strong>: Apresentação trabalho prático. - <strong>15/11</strong>: Apresentação trabalho prático. - <strong>17/11</strong>: Apresentação trabalho prático. ** Semana 18 ** - <strong>20/11</strong>: Apresentação trabalho prático. - <strong>29/11</strong>: Apresentação trabalho prático. - <strong>01/12</strong>: Apresentação trabalho prático. FIM DO SEMESTRE LETIVO ** Semana 19 ** Semana de estudos - <strong>05/12</strong>: Entrega final do trabalho prático. ** Semana 20 ** Semanda de finais. - <strong>15/12</strong>: Exame final.</p>
+<p><strong>Semana 2</strong></p>
+<ul>
+<li><strong>07/08</strong>: Idéias: propriedades de estimadores, não-viés, consistência, distribuição e eficiência.</li>
+<li><strong>09/08</strong>: Consolidação dos conceitos apresentados.</li>
+<li><strong>11/08</strong>: Exemplos baseados em simulação das propriedades apresentadas.</li>
+</ul>
+<p><strong>Semana 3</strong></p>
+<ul>
+<li><strong>14/08</strong>: Revisão geral e formalização matemática.</li>
+<li><strong>16/08</strong>: Revisão geral e formalização matemática.</li>
+<li><strong>18/08</strong>: Revisão geral e formalização matemática.</li>
+</ul>
+<p><strong>Parte II - Revisão e exemplificação computacional de ferramentas da teoria de probabilidades.</strong></p>
+<p><strong>Semana 4</strong></p>
+<ul>
+<li><strong>21/08</strong>: Exemplo motivacional.</li>
+<li><strong>23/08</strong>: Lei dos grandes números (LLN) e tipos de convergência.</li>
+<li><strong>25/08</strong>: Consistência de estimadores. Desigualdade de Chebychev’s, Chebychev’s LLN. Discussão tipos de convergência.</li>
+</ul>
+<p><strong>Semana 5</strong></p>
+<ul>
+<li><strong>28/08</strong>: Kolmogorov’s LLN, Markov’s LLN, LLNs para v.a correlacionadas.</li>
+<li><strong>30/08</strong>: Resultados para manipulação de limites em probabilidade.</li>
+<li><strong>01/09</strong>: Exemplos de simulação.</li>
+</ul>
+<p><strong>Semana 6</strong></p>
+<ul>
+<li><strong>04/09</strong>: Convergência em distribuição e Teorema Central do Limite-CLT (Lindeberg-Levy, Lindeberg-Levy multivariado, Lindeberg-Feller).</li>
+<li><strong>06/09</strong>: Liapounov’s CLT, normalidade assintótica e manipulação de CLT’s.</li>
+<li><strong>08/09</strong>: Método detal e revisão geral.</li>
+</ul>
+<p><strong>Semana 7</strong></p>
+<ul>
+<li><strong>11/09</strong>: Aula vaga para cobrir possíveis pontos adicionais ou que não deu tempo nas semanas anteriores.</li>
+<li><strong>13/09</strong>: Aula vaga para cobrir possíveis pontos adicionais ou que não deu tempo nas semanas anteriores.</li>
+<li><strong>15/09</strong>: Avaliação 1.</li>
+</ul>
+<p><strong>Parte III - Inferência estatística</strong></p>
+<p><strong>Semana 8</strong></p>
+<ul>
+<li><strong>18/09</strong>: Verossimilhança e log-verossimilhança.</li>
+<li><strong>20/09</strong>: Função escore e informação de Fisher.</li>
+<li><strong>22/09</strong>: Informação observada.</li>
+</ul>
+<p><strong>Semana 9</strong></p>
+<ul>
+<li><strong>25/09</strong>: Desigualdade de Cramér-Rao.</li>
+<li><strong>27/09</strong>: Normalidade assintótica da função escore.</li>
+<li><strong>29/09</strong>: Estimador de máxima verossimilhança (MLE).</li>
+</ul>
+<p><strong>Semana 10</strong></p>
+<ul>
+<li><strong>02/10</strong>: Familia exponencial de distribuições.</li>
+<li><strong>04/10</strong>: Consistência do MLE.</li>
+<li><strong>06/10</strong>: Eficiência e normalidade assintótica do MLE.</li>
+</ul>
+<p><strong>Semana 11</strong></p>
+<ul>
+<li><strong>09/10</strong>: Exemplos: A distribuição Weibull e modelos de locação.</li>
+<li><strong>11/10</strong>: Vetores de parâmetros: o vetor escore e a matrix de informação de Fisher.</li>
+<li><strong>13/10</strong>: Consistência e normalidade assintótica do MLE, ortogonalidade.</li>
+</ul>
+<p><strong>Semana 12</strong></p>
+<ul>
+<li><strong>16/10</strong>: Exemplos: Modelos exponenciais de dispersão e regressão linear.</li>
+<li><strong>18/10</strong>: Suficiência. Critério da fatorização de Neyman-Fisher.</li>
+<li><strong>20/10</strong>: Teorema de Rao-Blackwell e Lehmann-Scheffê.</li>
+</ul>
+<p><strong>Semana 13</strong></p>
+<ul>
+<li><strong>23/10</strong>: Teste da razão de verossimilhança e outros testes para grandes amostras.</li>
+<li><strong>25/10</strong>: Continuação e exemplos.</li>
+<li><strong>27/10</strong>: Avaliação 2.</li>
+</ul>
+<p><strong>Parte IV - Computação e Inferência estatística.</strong></p>
+<p><strong>Semana 14</strong></p>
+<ul>
+<li><strong>30/10</strong>: Entendendo distribuições de probabilidade. Estimação pontual e intervalos de confiança assintóticos.</li>
+<li><strong>01/11</strong>: Testes de hipóteses e verossimilhança perfilhada.</li>
+<li><strong>03/11</strong>: Desenhando estudos de simulação para avaliar propriedades de estimadores, intervalos de confiança e testes de hipóteses.</li>
+</ul>
+<p><strong>Semana 15</strong></p>
+<ul>
+<li><strong>06/11</strong>: Prática I: Programando a função de probabilidade ou densidade probabilidade. Verossimilhança, log-verossimilhança e maximização numérica.</li>
+<li><strong>08/11</strong>: Prática II: Intervalos de confiança e teste de hipóteses.</li>
+<li><strong>10/11</strong>: Prática III: Programando melhores algorithmos de maximização (Newthon-Raphson e Fisher-Scoring).</li>
+</ul>
+<p><strong>Semana 16</strong></p>
+<ul>
+<li><strong>13/11</strong>: Trabalho prático.</li>
+<li><strong>15/11</strong>: Trabalho prático.</li>
+<li><strong>17/11</strong>: Trabalho prático.</li>
+</ul>
+<p><strong>Semana 17</strong></p>
+<ul>
+<li><strong>13/11</strong>: Apresentação trabalho prático.</li>
+<li><strong>15/11</strong>: Apresentação trabalho prático.</li>
+<li><strong>17/11</strong>: Apresentação trabalho prático.</li>
+</ul>
+<p><strong>Semana 18</strong></p>
+<ul>
+<li><strong>20/11</strong>: Apresentação trabalho prático.</li>
+<li><strong>29/11</strong>: Apresentação trabalho prático.</li>
+<li><strong>01/12</strong>: Apresentação trabalho prático.</li>
+<li>FIM DO SEMESTRE LETIVO</li>
+</ul>
+<p><strong>Semana 19</strong> Semana de estudos</p>
+<ul>
+<li><strong>05/12</strong>: Entrega final do trabalho prático.</li>
+</ul>
+<p><strong>Semana 20</strong> Semanda de finais.</p>
+<ul>
+<li><strong>15/12</strong>: Exame final.</li>
+</ul>
 <div id="notas" class="section level2">
 <h2>Notas</h2>
 <p>As notas estão disponíveis <a href="notas.html">nesta página</a>.</p>
