--- a/referencias.html
+++ b/referencias.html
@@ -180,7 +180,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">CE001</a>
+      <a class="navbar-brand" href="index.html">CE085</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -204,41 +204,20 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="Slides/Aula1.pdf">Introdução à Análise Exploratória de Dados [PDF]</a>
+      <a href="Slides/Primer.pdf">Ferramentas de probabilidade [PDF]</a>
     </li>
     <li>
-      <a href="Slides/Aula2.pdf">Probabilidaes [PDF]</a>
+      <a href="Slides/Notes.pdf">Notas de aula Bent Jorgensen [PDF]</a>
     </li>
     <li>
-      <a href="Slides/Aula3.pdf">Variáveis aleatórias discretas [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula4.pdf">Medidas resumo [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula5.pdf">Variáveis bidimensionais [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula6.pdf">Variáveis aleatórias contínuas [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula7.pdf">Inferência estatística [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Script1.R">R script - Inferência estatística</a>
-    </li>
-    <li>
-      <a href="Slides/Aula8.pdf">Teste de hipóteses [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula9.pdf">Tópicos Especiais [PDF]</a>
+      <a href="Slides/masterSINAPE.pdf">Métodos Computacionais para Inferência estatística [PDF]</a>
     </li>
   </ul>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="https://github.com/wbonat/ce001m-2017-1">GitHub</a>
+  <a href="https://github.com/wbonat/CE085">GitHub</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
@@ -262,45 +241,19 @@ $(document).ready(function () {
 </div>
 
 
-<div id="referencias-basicas" class="section level2">
-<h2>Referências básicas</h2>
 <ul>
-<li><p><a href="http://www.ime.usp.br/~marcos">Magalhães, MN</a>; <a href="http://www.ime.usp.br/~acarlos">Lima, ACP</a>. <a href="http://www.ime.usp.br/~noproest">Noções de Probabilidade e Estatística</a>. São Paulo: EDUSP, 2008 (6ª edição).</p></li>
-<li><p>Bussab, WO; <a href="http://www.ime.usp.br/~pam">Morettin, PA</a>. <a href="http://www.editorasaraiva.com.br/produtos/show/isbn:9788502207998/titulo:estatistica-basica/">Estatística Básica</a>. São Paulo: <a href="http://www.saraivauni.com.br">Editora Saraiva</a>, 2006 (5ª Edição).</p></li>
+<li><p>Barndorff-Nielsen, O.E. and Cox, D.R. <a href="https://books.google.com.br/books/about/Inference_and_Asymptotics.html?id=zvEWBIFz-AgC&amp;redir_esc=y">Inference and Asymptotics.</a> Chapman and Hall, 1994.</p></li>
+<li><p>Silvey, S.D <a href="https://books.google.com.br/books?id=qIKLejbVMf4C&amp;printsec=frontcover&amp;dq=Statistical+Inference&amp;hl=en&amp;sa=X&amp;ved=0ahUKEwj4m-SDvLbVAhWQPpAKHVSzBG8Q6AEIKDAA#v=onepage&amp;q=Statistical%20Inference&amp;f=false">Statistical Inference</a>. Chapman and Hall, 1983.</p></li>
+<li><p>Azzalini, A. <a href="https://books.google.com.br/books?id=hyN6gXHvSo0C&amp;printsec=frontcover&amp;dq=Statistical+Inference+based+on+the+likelihood.&amp;hl=en&amp;sa=X&amp;ved=0ahUKEwiXjcGUvLbVAhVFiZAKHbhdBG8Q6AEIKDAA#v=onepage&amp;q=Statistical%20Inference%20based%20on%20the%20likelihood.&amp;f=false">Statistical Inference based on the likelihood.</a> Chapman and Hall, 1996.</p></li>
+<li><p>Casella, G. and Berger, R. L. <a href="http://www.cengage.com.br/?s=Infer%C3%AAncia+Estat%C3%ADstica">Inferência Estatística.</a> Cengage, 2010.</p></li>
+<li><p>Wasserman, L. <a href="http://www.springer.com/br/book/9780387402727">All of Statistics: A concise course in Statistical Inference.</a> Springer, 2003.</p></li>
+<li><p>Sen, P. K. and Singer, J. M. <a href="https://books.google.com.br/books/about/Large_Sample_Methods_in_Statistics.html?id=Q-8Tp201fGMC&amp;redir_esc=y">Large Sample Methods in Statistics</a> Chapman and Hall, 1993.</p></li>
+<li><p>Tanner, M. A. <a href="https://books.google.com.br/books?id=CAPrBwAAQBAJ&amp;printsec=frontcover&amp;dq=Tools+for+Statistical+Inference&amp;hl=en&amp;sa=X&amp;ved=0ahUKEwiuqJawvrbVAhVEhZAKHVGrAd8Q6AEIKDAA#v=onepage&amp;q=Tools%20for%20Statistical%20Inference&amp;f=false">Tools for Statistical Inference</a> Springer, 1996.</p></li>
 </ul>
-</div>
-<div id="referencias-complementares" class="section level2">
-<h2>Referências complementares</h2>
-<ul>
-<li>Andrade, DF; Ogliari, PJ. <a href="http://www.editora.ufsc.br/publicacao/detalhe/id/537">Estatística para as ciências agrárias e biológicas, com noções de experimentação</a>. Florianópolis: Editora da UFSC, 2013.</li>
-<li>Dantas, CAB. <a href="http://www.edusp.com.br/detlivro.asp?id=41384">Probabilidade: um curso introdutório</a>. São Paulo: EDUSP, 2008.</li>
-<li>Morettin, LG. <a href="http://loja.pearson.com.br/estatistica-basica-probabilidade-e-inferencia-9788576053705/p">Estatística básica: probabilidade e inferência</a>. São Paulo: Pearson, 2010.</li>
-<li>Navidi, W. <a href="http://www.grupoa.com.br/livros/matematica-e-estatistica/probabilidade-e-estatistica-para-ciencias-exatas/9788580550733">Probabilidade e estatística para ciências exatas</a>. Porto Alegre: Bookman, 2012.</li>
-<li>Spiegel, MR; Schiller, J; Srinivasan, A. <a href="http://www.grupoa.com.br/livros/matematica-e-estatistica/probabilidade-e-estatistica/9788565837187">Probabilidade e estatística</a>. Porto Alegre: Bookman, 2013.</li>
-<li><strong>Nota:</strong> existem diversos textos de estatística compatíveis com o programa do curso. Consulte o professor sobre a adequação de qualquer outra referência bibliográfica.</li>
-</ul>
-</div>
-<div id="referencias-online" class="section level2">
-<h2>Referências <em>online</em></h2>
-<ul>
-<li><a href="https://pt.coursera.org">Coursera</a></li>
-<li><a href="http://www.khanacademy.org">Kahn Academy</a> vídeos sobre diversos assuntos, incluindo sessões especificas de estatística e probabilidade.</li>
-<li><a href="http://www.udacity.com">Udacity Online courses</a>. Ver em particular:
-<ul>
-<li><a href="https://www.udacity.com/course/st101">Introduction to Statistics</a></li>
-</ul></li>
-</ul>
-</div>
 <div id="leituras-complementares" class="section level2">
 <h2>Leituras complementares</h2>
 <ul>
-<li>Hilborn, R; Mangel, M. <a href="http://press.princeton.edu/titles/5987.html">The ecological detective: confronting models with data</a>. Princeton University Press, 1997.</li>
-<li>Huff, D. <a href="http://www.intrinseca.com.br/livro/624/">Como mentir com estatística</a>. Rio de Janeiro: Intrínseca, 2016.</li>
-<li>Mlodinow, L. <a href="http://zahar.com.br/livro/o-andar-do-b%C3%AAbado">O andar do bêbado. Como o acaso determina nossas vidas</a>. Rio de Janeiro: Zahar, 2009.</li>
-<li>Oakley, B. <a href="http://www.infopress.com.br">Aprendendo a aprender. Como ter sucesso em matemática, ciências ou qualquer outra matéria</a>. São Paulo: Infopress, 2015.</li>
-<li>Pólya, G. <a href="https://www.penguin.co.uk/books/12619/how-to-solve-it">How to solve it</a>. London: Penguin Books, 1990.</li>
-<li>Salsburg, D. <a href="http://www.zahar.com.br/livro/uma-senhora-toma-cha">Uma senhora toma chá. Como a estatística revolucionou a ciência no século XX</a>. Rio de Janeiro: Zahar, 2009.</li>
-<li>Wheelan, C. <a href="http://www.zahar.com.br/livro/estatistica">Estatística: o que é, para que serve, como funciona</a>. Rio de Janeiro: Zahar, 2016.</li>
+<li>Bonat, W. H. and Kokonendji, C. C. <a href="http://www.tandfonline.com/doi/abs/10.1080/00949655.2017.1318876?journalCode=gscs20">Flexible Tweedie regression models for continuous data.</a> Journal of Statistical Computation and Simulation, 87(11), 2138-2152, 2017.</li>
 </ul>
 </div>
 
