--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">CE001</a>
+      <a class="navbar-brand" href="index.html">CE085</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -204,41 +204,20 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="Slides/Aula1.pdf">Introdução à Análise Exploratória de Dados [PDF]</a>
+      <a href="Slides/Primer.pdf">Ferramentas de probabilidade [PDF]</a>
     </li>
     <li>
-      <a href="Slides/Aula2.pdf">Probabilidaes [PDF]</a>
+      <a href="Slides/Notes.pdf">Notas de aula Bent Jorgensen [PDF]</a>
     </li>
     <li>
-      <a href="Slides/Aula3.pdf">Variáveis aleatórias discretas [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula4.pdf">Medidas resumo [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula5.pdf">Variáveis bidimensionais [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula6.pdf">Variáveis aleatórias contínuas [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula7.pdf">Inferência estatística [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Script1.R">R script - Inferência estatística</a>
-    </li>
-    <li>
-      <a href="Slides/Aula8.pdf">Teste de hipóteses [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula9.pdf">Tópicos Especiais [PDF]</a>
+      <a href="Slides/masterSINAPE.pdf">Métodos Computacionais para Inferência estatística [PDF]</a>
     </li>
   </ul>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="https://github.com/wbonat/ce001m-2017-1">GitHub</a>
+  <a href="https://github.com/wbonat/CE085">GitHub</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
@@ -301,9 +280,10 @@ $(document).ready(function () {
 <ul>
 <li>Introdução ao pensamento estatístico.</li>
 <li>Revisão e exemplificação computacional de ferramentas da teoria de probabilidade.</li>
-<li>Métodos para inferência estatística.</li>
+<li>Inferência estatística.</li>
 <li>Métodos computacionais para Inferência estatística.</li>
 </ul>
+<p>O curso será baseado em três materiais (arquivos formato pdf) que estão disponibilizados na aba “Materiais”. Além disso, no decorrer do curso um conjunto de notas de aulas no formato de slides será disponibilizado.</p>
 <!-- links -->
 </div>
 
