--- a/recursos.html
+++ b/recursos.html
@@ -180,7 +180,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">CE001</a>
+      <a class="navbar-brand" href="index.html">CE085</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -204,41 +204,20 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="Slides/Aula1.pdf">Introdução à Análise Exploratória de Dados [PDF]</a>
+      <a href="Slides/Primer.pdf">Ferramentas de probabilidade [PDF]</a>
     </li>
     <li>
-      <a href="Slides/Aula2.pdf">Probabilidaes [PDF]</a>
+      <a href="Slides/Notes.pdf">Notas de aula Bent Jorgensen [PDF]</a>
     </li>
     <li>
-      <a href="Slides/Aula3.pdf">Variáveis aleatórias discretas [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula4.pdf">Medidas resumo [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula5.pdf">Variáveis bidimensionais [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula6.pdf">Variáveis aleatórias contínuas [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula7.pdf">Inferência estatística [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Script1.R">R script - Inferência estatística</a>
-    </li>
-    <li>
-      <a href="Slides/Aula8.pdf">Teste de hipóteses [PDF]</a>
-    </li>
-    <li>
-      <a href="Slides/Aula9.pdf">Tópicos Especiais [PDF]</a>
+      <a href="Slides/masterSINAPE.pdf">Métodos Computacionais para Inferência estatística [PDF]</a>
     </li>
   </ul>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="https://github.com/wbonat/ce001m-2017-1">GitHub</a>
+  <a href="https://github.com/wbonat/CE085">GitHub</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
@@ -262,9 +241,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>O curso não prevê conteúdo computacional. Entretanto todo o conteúdo abordado pode ser tratado computacionalmente por planilhas eletrônicas (como por exemplo o LibreOffice), linguagens ou programas estatísticos.</p>
-<p>Nas páginas do curso, você verá um botão escrito <code>Code</code> acima de algumas tabelas e gráficos. Ao clicar nesse botão, é revelado o código que foi utilizado para gerar aquele resultado, em linguagem R.</p>
-<p>O uso de programas computacionais pode auxiliar o entendimento do conteúdo do curso, e os códigos em R servem como ilustração para os alunos interessados, mas não será parte da avaliação.</p>
+<p>O curso prevê conteúdo computacional. Nas páginas do curso, você verá um botão escrito <code>Code</code> acima de algumas tabelas e gráficos. Ao clicar nesse botão, é revelado o código que foi utilizado para gerar aquele resultado, em linguagem R. O uso de programas computacionais auxilia o entendimento do conteúdo do curso, e os códigos em R servem como ilustração.</p>
 <div id="programa-para-estatistica" class="section level2">
 <h2>Programa para estatística</h2>
 <ul>
