--- a/aulas.html
+++ b/aulas.html
@@ -244,102 +244,102 @@ $(document).ready(function () {
 <p><strong>Parte I - Introdução ao pensamento estatístico</strong></p>
 <p><strong>Semana 1</strong></p>
 <ul>
-<li><strong>31/07</strong>: Apresentação do curso.</li>
-<li><strong>02/08</strong>: Idéias - população, amostra, amostragem e pensamento frequentista.</li>
-<li><strong>04/08</strong>: Idéias - modelos estatístico, suporte, parâmetros, estimadores e estimativas.</li>
+<li>Apresentação do curso.</li>
+<li>Idéias - população, amostra, amostragem e pensamento frequentista.</li>
+<li>Idéias - modelos estatístico, suporte, parâmetros, estimadores e estimativas.</li>
 </ul>
 <p><strong>Semana 2</strong></p>
 <ul>
-<li><strong>07/08</strong>: Idéias: propriedades de estimadores, não-viés, consistência, distribuição e eficiência.</li>
-<li><strong>09/08</strong>: Consolidação dos conceitos apresentados.</li>
-<li><strong>11/08</strong>: Exemplos baseados em simulação das propriedades apresentadas.</li>
+<li>Idéias: propriedades de estimadores, não-viés, consistência, distribuição e eficiência.</li>
+<li>Consolidação dos conceitos apresentados.</li>
+<li>Exemplos baseados em simulação das propriedades apresentadas.</li>
 </ul>
 <p><strong>Semana 3</strong></p>
 <ul>
-<li><strong>14/08</strong>: Revisão geral e formalização matemática.</li>
-<li><strong>16/08</strong>: Revisão geral e formalização matemática.</li>
-<li><strong>18/08</strong>: Revisão geral e formalização matemática.</li>
+<li>Revisão geral e formalização matemática.</li>
+<li>Revisão geral e formalização matemática.</li>
+<li>Revisão geral e formalização matemática.</li>
 </ul>
 <p><strong>Parte II - Revisão e exemplificação computacional de ferramentas da teoria de probabilidades.</strong></p>
 <p><strong>Semana 4</strong></p>
 <ul>
-<li><strong>21/08</strong>: Exemplo motivacional.</li>
-<li><strong>23/08</strong>: Lei dos grandes números (LLN) e tipos de convergência.</li>
-<li><strong>25/08</strong>: Consistência de estimadores. Desigualdade de Chebychev’s, Chebychev’s LLN. Discussão tipos de convergência.</li>
+<li>Exemplo motivacional.</li>
+<li>Lei dos grandes números (LLN) e tipos de convergência.</li>
+<li>Consistência de estimadores. Desigualdade de Chebychev’s, Chebychev’s LLN. Discussão tipos de convergência.</li>
 </ul>
 <p><strong>Semana 5</strong></p>
 <ul>
-<li><strong>28/08</strong>: Kolmogorov’s LLN, Markov’s LLN, LLNs para v.a correlacionadas.</li>
-<li><strong>30/08</strong>: Resultados para manipulação de limites em probabilidade.</li>
-<li><strong>01/09</strong>: Exemplos de simulação.</li>
+<li>Kolmogorov’s LLN, Markov’s LLN, LLNs para v.a correlacionadas.</li>
+<li>Resultados para manipulação de limites em probabilidade.</li>
+<li>Exemplos de simulação.</li>
 </ul>
 <p><strong>Semana 6</strong></p>
 <ul>
-<li><strong>04/09</strong>: Convergência em distribuição e Teorema Central do Limite-CLT (Lindeberg-Levy, Lindeberg-Levy multivariado, Lindeberg-Feller).</li>
-<li><strong>06/09</strong>: Liapounov’s CLT, normalidade assintótica e manipulação de CLT’s.</li>
-<li><strong>08/09</strong>: Método detal e revisão geral.</li>
+<li>Convergência em distribuição e Teorema Central do Limite-CLT (Lindeberg-Levy, Lindeberg-Levy multivariado, Lindeberg-Feller).</li>
+<li>Liapounov’s CLT, normalidade assintótica e manipulação de CLT’s.</li>
+<li>Método delta e revisão geral.</li>
 </ul>
 <p><strong>Semana 7</strong></p>
 <ul>
-<li><strong>11/09</strong>: Aula vaga para cobrir possíveis pontos adicionais ou que não deu tempo nas semanas anteriores.</li>
-<li><strong>13/09</strong>: Aula vaga para cobrir possíveis pontos adicionais ou que não deu tempo nas semanas anteriores.</li>
-<li><strong>15/09</strong>: Avaliação 1.</li>
+<li>Aula vaga para cobrir possíveis pontos adicionais ou que não deu tempo nas semanas anteriores.</li>
+<li>Aula vaga para cobrir possíveis pontos adicionais ou que não deu tempo nas semanas anteriores.</li>
+<li>Avaliação 1.</li>
 </ul>
 <p><strong>Parte III - Inferência estatística</strong></p>
 <p><strong>Semana 8</strong></p>
 <ul>
-<li><strong>18/09</strong>: Verossimilhança e log-verossimilhança.</li>
-<li><strong>20/09</strong>: Função escore e informação de Fisher.</li>
-<li><strong>22/09</strong>: Informação observada.</li>
+<li>Verossimilhança e log-verossimilhança.</li>
+<li>Função escore e informação de Fisher.</li>
+<li>Informação observada.</li>
 </ul>
 <p><strong>Semana 9</strong></p>
 <ul>
-<li><strong>25/09</strong>: Desigualdade de Cramér-Rao.</li>
-<li><strong>27/09</strong>: Normalidade assintótica da função escore.</li>
-<li><strong>29/09</strong>: Estimador de máxima verossimilhança (MLE).</li>
+<li>Desigualdade de Cramér-Rao.</li>
+<li>Normalidade assintótica da função escore.</li>
+<li>Estimador de máxima verossimilhança (MLE).</li>
 </ul>
 <p><strong>Semana 10</strong></p>
 <ul>
-<li><strong>02/10</strong>: Familia exponencial de distribuições.</li>
-<li><strong>04/10</strong>: Consistência do MLE.</li>
-<li><strong>06/10</strong>: Eficiência e normalidade assintótica do MLE.</li>
+<li>Familia exponencial de distribuições.</li>
+<li>Consistência do MLE.</li>
+<li>Eficiência e normalidade assintótica do MLE.</li>
 </ul>
 <p><strong>Semana 11</strong></p>
 <ul>
-<li><strong>09/10</strong>: Exemplos: A distribuição Weibull e modelos de locação.</li>
-<li><strong>11/10</strong>: Vetores de parâmetros: o vetor escore e a matrix de informação de Fisher.</li>
-<li><strong>13/10</strong>: Consistência e normalidade assintótica do MLE, ortogonalidade.</li>
+<li>Exemplos: A distribuição Weibull e modelos de locação.</li>
+<li>Vetores de parâmetros: o vetor escore e a matrix de informação de Fisher.</li>
+<li>Consistência e normalidade assintótica do MLE, ortogonalidade.</li>
 </ul>
 <p><strong>Semana 12</strong></p>
 <ul>
-<li><strong>16/10</strong>: Exemplos: Modelos exponenciais de dispersão e regressão linear.</li>
-<li><strong>18/10</strong>: Suficiência. Critério da fatorização de Neyman-Fisher.</li>
-<li><strong>20/10</strong>: Teorema de Rao-Blackwell e Lehmann-Scheffê.</li>
+<li>Exemplos: Modelos exponenciais de dispersão e regressão linear.</li>
+<li>Suficiência. Critério da fatorização de Neyman-Fisher.</li>
+<li>Teorema de Rao-Blackwell e Lehmann-Scheffê.</li>
 </ul>
 <p><strong>Semana 13</strong></p>
 <ul>
-<li><strong>23/10</strong>: Teste da razão de verossimilhança e outros testes para grandes amostras.</li>
-<li><strong>25/10</strong>: Continuação e exemplos.</li>
-<li><strong>27/10</strong>: Avaliação 2.</li>
+<li>Teste da razão de verossimilhança e outros testes para grandes amostras.</li>
+<li>Continuação e exemplos.</li>
+<li>Avaliação 2.</li>
 </ul>
 <p><strong>Parte IV - Computação e Inferência estatística.</strong></p>
 <p><strong>Semana 14</strong></p>
 <ul>
-<li><strong>30/10</strong>: Entendendo distribuições de probabilidade. Estimação pontual e intervalos de confiança assintóticos.</li>
-<li><strong>01/11</strong>: Testes de hipóteses e verossimilhança perfilhada.</li>
-<li><strong>03/11</strong>: Desenhando estudos de simulação para avaliar propriedades de estimadores, intervalos de confiança e testes de hipóteses.</li>
+<li>Entendendo distribuições de probabilidade. Estimação pontual e intervalos de confiança assintóticos.</li>
+<li>Testes de hipóteses e verossimilhança perfilhada.</li>
+<li>Desenhando estudos de simulação para avaliar propriedades de estimadores, intervalos de confiança e testes de hipóteses.</li>
 </ul>
 <p><strong>Semana 15</strong></p>
 <ul>
-<li><strong>06/11</strong>: Prática I: Programando a função de probabilidade ou densidade probabilidade. Verossimilhança, log-verossimilhança e maximização numérica.</li>
-<li><strong>08/11</strong>: Prática II: Intervalos de confiança e teste de hipóteses.</li>
-<li><strong>10/11</strong>: Prática III: Programando melhores algorithmos de maximização (Newthon-Raphson e Fisher-Scoring).</li>
+<li>Prática I: Programando a função de probabilidade ou densidade probabilidade. Verossimilhança, log-verossimilhança e maximização numérica.</li>
+<li>Prática II: Intervalos de confiança e teste de hipóteses.</li>
+<li>Prática III: Programando melhores algorithmos de maximização (Newthon-Raphson e Fisher-Scoring).</li>
 </ul>
 <p><strong>Semana 16</strong></p>
 <ul>
-<li><strong>13/11</strong>: Trabalho prático.</li>
-<li><strong>15/11</strong>: Trabalho prático.</li>
-<li><strong>17/11</strong>: Trabalho prático.</li>
+<li>Trabalho prático.</li>
+<li>Trabalho prático.</li>
+<li>Trabalho prático.</li>
 </ul>
 <p><strong>Semana 17</strong></p>
 <ul>
@@ -349,18 +349,18 @@ $(document).ready(function () {
 </ul>
 <p><strong>Semana 18</strong></p>
 <ul>
-<li><strong>20/11</strong>: Apresentação trabalho prático.</li>
-<li><strong>29/11</strong>: Apresentação trabalho prático.</li>
-<li><strong>01/12</strong>: Apresentação trabalho prático.</li>
+<li>Apresentação trabalho prático.</li>
+<li>Apresentação trabalho prático.</li>
+<li>Apresentação trabalho prático.</li>
 <li>FIM DO SEMESTRE LETIVO</li>
 </ul>
 <p><strong>Semana 19</strong> Semana de estudos</p>
 <ul>
-<li><strong>05/12</strong>: Entrega final do trabalho prático.</li>
+<li>Entrega final do trabalho prático.</li>
 </ul>
 <p><strong>Semana 20</strong> Semanda de finais.</p>
 <ul>
-<li><strong>15/12</strong>: Exame final.</li>
+<li><strong>02/07</strong>: Exame final.</li>
 </ul>
 <div id="notas" class="section level2">
 <h2>Notas</h2>
