--- a/index.html
+++ b/index.html
@@ -248,13 +248,13 @@ $(document).ready(function () {
 <h1>Detalhes da oferta da disciplina</h1>
 <ul>
 <li><strong>Curso:</strong> Bacharelado em Estatística (N)</li>
-<li><strong>Período:</strong> segundo semestre de 2017</li>
+<li><strong>Período:</strong> primeiro semestre de 2018</li>
 <li><strong>Professor Responsável:</strong> <a href="https://wbonat.github.io">Wagner Hugo Bonat</a>, (<a href="http://www.leg.ufpr.br">LEG</a>: Laboratório de Estatística e Geoinformação, sala 227, prédio de Exatas)</li>
 <li><strong>Horários e Locais:</strong>
 <ul>
-<li>Segunda, 19:00 - 20:30h, <strong>PA03</strong></li>
-<li>Quarta, 20:45 - 22:15h, <strong>PA02</strong></li>
-<li>Sexta, 19:00 - 20:30h, <strong>PA03</strong></li>
+<li>Segunda, 19:00 - 20:30h, <strong>XX</strong></li>
+<li>Quarta, 20:45 - 22:15h, <strong>XX</strong></li>
+<li>Quinta, 19:00 - 20:30h, <strong>XX</strong></li>
 </ul></li>
 <li><strong>Horários de atendimento do professor:</strong>
 <ul>
@@ -268,15 +268,15 @@ $(document).ready(function () {
 </ul></li>
 <li><strong>Datas importantes:</strong> De acordo com a <a href="http://www.est.ufpr.br/calendario/cepe6216.pdf">Resolução 62/16 - CEPE</a>:
 <ul>
-<li><strong>31/07</strong>: Início do semestre letivo</li>
-<li><strong>02/12</strong>: Final do semestre letivo</li>
-<li><strong>11/12-16/12</strong>: Período de exames</li>
+<li><strong>19/02</strong>: Início do semestre letivo</li>
+<li><strong>25/06</strong>: Final do semestre letivo</li>
+<li><strong>02/07-07/07</strong>: Período de exames</li>
 </ul></li>
 </ul>
 </div>
 <div id="programaobjetivos-da-disciplina" class="section level1">
 <h1>Programa/objetivos da disciplina</h1>
-<p>O objetivo deste curso é apresentar os conceitos básicos da inferência estatística. O curso introduz as principais idéias do pensamento estatístico do ponto de vista frequentista. Enfâse é dada a métodos de estimação e suas propriedades assintóticas. Pretende-se manter o curso em um nível intermediário de rigorosidade matemática. A demonstração formal dos principais teoremas será feita com riqueza de detalhes e sempre que possível acompanhada de estudos de simulação para exemplificar a aplicação prática dos teoremas. O curso é dividido em quatro etapas:</p>
+<p>O objetivo deste curso é apresentar os conceitos básicos da inferência estatística. O curso introduz as principais idéias do pensamento estatístico do ponto de vista frequentista. Ênfase é dada a métodos de estimação e suas propriedades assintóticas. Pretende-se manter o curso em um nível intermediário de rigorosidade matemática. A demonstração formal dos principais teoremas será feita com riqueza de detalhes e sempre que possível acompanhada de estudos de simulação para exemplificar a aplicação prática dos teoremas. O curso é dividido em quatro etapas:</p>
 <ul>
 <li>Introdução ao pensamento estatístico.</li>
 <li>Revisão e exemplificação computacional de ferramentas da teoria de probabilidade.</li>
