The site is alive.

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ $(document).ready(function () {
 <ul>
 <li><strong>Curso:</strong> Bacharelado em Estatística (N).</li>
 <li><strong>Período:</strong> Segundo semestre de 2018.</li>
-<li><strong>Professor Responsável:</strong> <a href="www.leg.ufpr.br/~wagner">Wagner Hugo Bonat</a>, (<a href="http://www.leg.ufpr.br">LEG</a>: Laboratório de Estatística e Geoinformação, sala 227, prédio de Exatas)</li>
+<li><strong>Professor Responsável:</strong> <a href="http://www.leg.ufpr.br/~wagner">Wagner Hugo Bonat</a>, (<a href="http://www.leg.ufpr.br">LEG</a>: Laboratório de Estatística e Geoinformação, sala 227, prédio de Exatas)</li>
 <li><strong>Horários e Locais:</strong>
 <ul>
 <li>Segunda, 19:00 - 20:30h, <strong>PA09</strong></li>
