--- a/README.html
+++ b/README.html
@@ -372,7 +372,7 @@ div.tocify {
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
-    <li class="dropdown-header">Lista 1 - Revisão de probabilidade</li>
+    <li class="dropdown-header">Lista 1 - Revisão de probabilidade [PDF]</li>
   </ul>
 </li>
 <li class="dropdown">
