--- a/referencias.html
+++ b/referencias.html
@@ -268,7 +268,7 @@ $(document).ready(function () {
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
-    <li class="dropdown-header">Lista 1 - Revisão de probabilidade</li>
+    <li class="dropdown-header">Lista 1 - Revisão de probabilidade [PDF]</li>
   </ul>
 </li>
 <li class="dropdown">
