--- a/README.html
+++ b/README.html
@@ -372,7 +372,9 @@ div.tocify {
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
-    <li class="dropdown-header">Lista 1 - Revisão de probabilidade [PDF]</li>
+    <li>
+      <a href="Lista/Lista1.pdf">Lista 1 - Revisão de probabilidade [PDF]</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
