--- a/recursos.html
+++ b/recursos.html
@@ -268,7 +268,9 @@ $(document).ready(function () {
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
-    <li class="dropdown-header">Lista 1 - Revisão de probabilidade [PDF]</li>
+    <li>
+      <a href="Lista/Lista1.pdf">Lista 1 - Revisão de probabilidade [PDF]</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
