--- a/README.html
+++ b/README.html
@@ -373,7 +373,7 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="Lista/Lista1.pdf">Lista 1 - Revisão de probabilidade [PDF]</a>
+      <a href="Slides/Lista1.pdf">Lista 1 - Revisão de probabilidade [PDF]</a>
     </li>
   </ul>
 </li>
