--- a/recursos.html
+++ b/recursos.html
@@ -269,7 +269,7 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="Lista/Lista1.pdf">Lista 1 - Revisão de probabilidade [PDF]</a>
+      <a href="Slides/Lista1.pdf">Lista 1 - Revisão de probabilidade [PDF]</a>
     </li>
   </ul>
 </li>
